Convert List.of() and Map.of() to Java 8 compatible alternatives in UtilsTests.java
Co-Authored-By: 于泽棋 <finyu@webank.com>